functioning basic controls, add audio, fixed spacing

--- a/c/main.css
+++ b/c/main.css
@@ -21,6 +21,11 @@ h1 {
   max-width: 1024px;
 }
 
+#audio {
+  width: 100%;
+  margin: .5rem auto;
+  padding: 0 .5rem;
+}
 
 #vid {
 	width:528px;
@@ -31,6 +36,24 @@ h1 {
 .col1 {
 	border:1px solid black;
   height: fit-content;
+}
+
+#video_form {
+  display:flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  flex-basis: 2;
+}
+
+fieldset {
+  width: 100%;
+  border: 0;
+  display: flex;
+  justify-content: space-around;
+}
+
+fieldset.half {
+  width: 45%;
 }
  
 
@@ -89,6 +112,7 @@ iframe {
 
 .hide {
   opacity:0;
+  pointer-events: none;
   transition: all 3s;
 }
 
